--- a/3.html
+++ b/3.html
@@ -34,10 +34,11 @@
             </div>
             <div class="row justify-content-center my-5">
                 <div class="col-12">
-                    <a href="4.html">Folytatás</a>
+                    <a href="4.html" class="btn btn-primary">Folytatás</a>
                 </div>
+                <br><br>
                 <div class="col-12">
-                    <a href="2.html">Visszalépés</a>
+                    <a href="2.html" class="btn btn-danger">Visszalépés</a>
                 </div>
             </div>
         </div>
