--- a/5.html
+++ b/5.html
@@ -10,28 +10,28 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <h1>2.</h1>
+                <h1>5.</h1>
 
-                Kellemetlen csönd telepszik a kocsmára. Tyucsev
-                az asztal fölött rád néz és így szól: - Nem tetszik a
-                képed! - Kasszandra egyetértően bólint. Ha azt
-                válaszolod: - De legalább rám lehet nézni, nem
-                úgy, mint rád! - lapozz a 294-re. Ha alázatosan azt
-                válaszolod: - Sajnálom, ilyennek születtem - és
-                kimész a pincéből - lapozz a 305-re
+                Rárohansz a Pajzsos lányra. Ő hidegvérrel céloz
+                és rád lő az íjpuskájával. A nyílvessző kardforgató
+                karodba mélyed. Izzó fájdalom bénít meg.
+                Vesztesz 1 ÜGYESSÉG és 2 ÉLETERŐ pontot!
+                Amikor összerogysz, a lány a torkodnak szegezi a
+                kardját. - Ne moccanj, ha kedves az életed - szól
+                rád. Lapozz a 75-re.
 
 
             </div>
             <div class="col-md-4">
-                <img src="kep3.jpg" class="img-fluid" alt="varju">
+                <img src="kep7.jpg" class="img-fluid" alt="varju">
             </div>
             <div class="row justify-content-center my-5">
                 <div class="col-12">
-                    <a href="3.html" class="btn btn-primary">Folytatás</a>
+                    <a href="6.html" class="btn btn-primary">Folytatás</a>
                 </div>
                 <br><br>
                 <div class="col-12">
-                    <a href="1.html" class="btn btn-danger">Visszalépés</a>
+                    <a href="4.html" class="btn btn-danger">Visszalépés</a>
                 </div>
             </div>
         </div>
