--- a/1.html
+++ b/1.html
@@ -36,18 +36,17 @@
                 vagy mi közeleg. Ha kirohansz a hozzád közelebb
                 lévő folyosón - lapozz a 17-re. Ha ott maradsz és
                 kardot rántasz - lapozz a 30-ra.
-
-
             </div>
             <div class="col-md-4">
                 <img src="kep2.jpg" class="img-fluid" alt="varju">
             </div>
             <div class="row justify-content-center my-5">
                 <div class="col-12">
-                    <a href="2.html">Folytatás</a>
+                    <a href="2.html" class="btn btn-primary">Folytatás</a>
                 </div>
+                <br><br>
                 <div class="col-12">
-                    <a href="index.html">Visszalépés</a>
+                    <a href="index.html" class="btn btn-danger">Visszalépés</a>
                 </div>
             </div>
         </div>
