--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Feldühít a felismerés, hogy sorsodat mások irá-nyítják, s úgy határozol
             </div>
             <div class="row justify-content-center my-5">
                 <div class="col-12">
-                    <a href="1.html">Játék kezdése</a>
+                    <a href="1.html" class="btn btn-success">Játék kezdése</a>
                 </div>
             </div>
         </div>
